@@ -1,5 +1,9 @@
 2009-07-31  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/bridge.py (copy_data, StoringProxy.stored_read)
+	* src/utils.py (u8_unpack, u32_unpack, read_fields): Rename "bytes"
+	to avoid a conflict with a built-in.
+
 	* src/settings.py.in (koji_do_proxy_auth): New variable.
 	* src/bridge.py (SignRpmRequestType.__koji_get_session): Proxy
 	authenticate as the client if settings allow it.
